--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable("proj-Hydrate-DG-2comp" proj-Hydrate-DG-2comp.cc)
-target_link_dune_default_libraries("proj-Hydrate-DG-2comp")
+add_executable("proj-HydrateDG" proj-HydrateDG.cc)
+target_link_dune_default_libraries("proj-HydrateDG")
