--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable("proj-HydrateDG" proj-HydrateDG.cc)
-target_link_dune_default_libraries("proj-HydrateDG")
+add_executable("proj-HydrateDG-Ex1" proj-HydrateDG-Ex1.cc)
+target_link_dune_default_libraries("proj-HydrateDG-Ex1")
