boundary conditions edited

--- a/dune/proj-HydrateDG/hydrate-DG-Ex1/inputs/sample.ini
+++ b/dune/proj-HydrateDG/hydrate-DG-Ex1/inputs/sample.ini
@@ -35,13 +35,14 @@ max_iterations=12
 abs_error=1.e-6
 
 [initial]
-Sg=0.01
-Pw=1e6
-Pg=1e6
-Sh=0.1
+Sg=0.0
+Pw=2.e6
+Pg=2.0848e6
+Sh=0.3
 YH2O=0.01
-XCH4=0.01
-
+XCH4=0.
+XC=0.0055
+T=4.
 
 [boundary]
 Pw_at_left=2.0e6
@@ -52,7 +53,7 @@ number_of_materials=2
 
 [sediment.material0]
 por=0.3
-K=1.e-13
+K=1.e-12
 pentry=50000.
 lambda=1.2
 swr=0.
