--- a/dune/proj-HydrateDG/hydrate-DG-Ex1/inputs/sample.ini
+++ b/dune/proj-HydrateDG/hydrate-DG-Ex1/inputs/sample.ini
@@ -1,8 +1,11 @@
+[Grid]
+worlddim=2
+
 [grid.yasp]
 LX=1.
-NX=8
-LZ=1.
-NZ=8
+NX=100
+LZ=0.01
+NZ=1
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -15,7 +18,7 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=1
+dt_initial=0.01
 time_end=3600
 
 [adaptive_time_control]
@@ -28,28 +31,37 @@ min_newton_steps=3
 [output]
 path_name=tests_202002
 file_name=test0
-time_interval=5
+time_interval=60
 
 [newton]
 max_iterations=12
 abs_error=1.e-6
+reassemble_treshhold = 0.0 # always reassemble J
+verbosity = 3 # be verbose
+reduction = 1e-10 # total reduction
+min_linear_reduction = 1e-4 # min. red. in linear solve
+
+[newton.terminate]
+max_iterations = 25 # limit number of iterations
+
+[newton.line_search]
+line_search_max_iterations = 10 # limit linea search iterations
 
 [initial]
-Sg=0.0
-Pw=2.e6
-Pg=2.0848e6
-Sh=0.3
+Sg=0.1
+Pw=1.e6
+Sh=0.0
 YH2O=0.0005
 XCH4=0.
 XC=0.0055
-T=4.
+T=15.
 
 [boundary]
 Pw_at_left=2.0e6
-Sg_at_inlet=0.0
+Sg_at_left=0.8
 
 [sediment]
-number_of_materials=2
+number_of_materials=1
 
 [sediment.material0]
 por=0.3
@@ -71,7 +83,7 @@ beta=1.
 
 [reference_state]
 salinity=0.
-temperature=4.
+temperature=10.
 
 [gravity]
 flag=true
