--- a/dune/proj-HydrateDG/operators/CMakeLists.txt
+++ b/dune/proj-HydrateDG/operators/CMakeLists.txt
@@ -2,3 +2,4 @@
 install(FILES LocalOperator.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG-Ex1/hydrate-DG-old)
 install(FILES TimeOperator.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG-Ex1/hydrate-DG-old)
 install(FILES Initial.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG-Ex1/hydrate-DG-old)
+install(FILES indices.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/proj-HydrateDG/hydrate-DG-Ex1/parameters)
