parameters of example 1 from Shubhangi paper were defined

--- a/dune/Hydrate-DG/akerbp2D_pockmark/CMakeLists.txt
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/CMakeLists.txt
@@ -1,5 +1,6 @@
 #install headers
 install(FILES boundary_conditions.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark)
+install(FILES characteristic_values.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark)
 install(FILES initial_conditions.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark)
 install(FILES driver.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark)
 install(FILES include_problem.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark)
