--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -1,13 +1,80 @@
-[grid.ug]
-name=grid.msh
-LX=1000.
-LZ=800.
+[Grid]
+worlddim=2
+
+[grid.yasp]
+LX=1.
+NX=20
+LZ=1.
+NZ=20
+
+[grid.yasp.lens]
+Xmin=0.4
+Zmin=0.2
+Xmax=0.6
+Zmax=0.3
+
+[grid.yasp.inlet]
+Zmin=0.2
+Zmax=0.3
+
+[time]
+dt_initial=7200.
+time_end=72000.
+
+[adaptive_time_control]
+flag=true
+dt_min=1.e-2
+dt_max=7200.
+max_newton_steps=8
+min_newton_steps=4
+
+[output]
+path_name=tests_202002
+file_name=test0
+time_interval=7200.
+
+[newton]
+max_iterations=12
+abs_error=1.e-6
+reassemble_treshhold = 0.0 # always reassemble J
+verbosity = 3 # be verbose
+reduction = 1.e-4 # total reduction
+min_linear_reduction = 1.e-4 # min. red. in linear solve
+
+[newton.line_search]
+line_search_max_iterations = 40 # limit linea search iterations
+
+[initial]
+Sg=0.0
+Pw=2.e6
+Sh=0.3
+YH2O=0.0005
+XCH4=0.
+XC=0.0055
+T=4.
+
+[boundary]
+Pw_at_left=1.5e6
+Sg_at_left=0.8
+
+[sediment]
+number_of_materials=1
+
+[sediment.material0]
+por=0.3
+K=1.e-12
+pentry=50000.
+lambda=1.2
+swr=0.
+sgr=0.
+m=3
+beta=1.
 
 [initial_problem]
-dt_initial=0.0001
-time_end=11
+dt_initial=0.01
+time_end=10
 hydrate_formation_rate=1e-16
-hydrate_dissociation_rate=0
+hydrate_dissociation_rate=1.e-17
 salinity=0.025
 porosity=0.5
 abs_permeability=1e-15
@@ -18,115 +85,20 @@ sgr=0
 m=3
 beta=1
 
-[time]
-dt_initial=0.001
-time_end=300
-
-[adaptive_time_control]
-flag=true
-dt_min=1.e-6
-dt_max=0.1
-max_newton_steps=6
-min_newton_steps=4
-
-[output]
-path_name=tests_202003
-file_name=test0
-time_interval=1
-
-[newton]
-max_iterations=12
-abs_error=1.e-4
-
-[free_gas_pocket]
-depth_below_BSR=0.
-gas_saturation=0.2
-thickness=100.0
-width=500.0
-
-[paleo_conditions]
-sea_floor_pressure=15.
-sea_floor_temperature=4.0
-regional_temperature_gradient=35.0
-BSR_depth=360.0
-
-[sediment]
-number_of_layers=1
-
-[sediment.layer0]
-z=0.
-porosity=0.5
-abs_permeability=1.e-15
-entry_pressure=1.e5
+[sediment.material1]
+por=0.1
+K=1.e-14
+pentry=100000.
 lambda=1.2
 swr=0.
 sgr=0.
-m=0.25
+m=3
 beta=1.
 
-[fracture]
-diameter=25.0
-depth=300.0
-porosity=0.75
-abs_permeability=1.e-15
-entry_pressure=1e3
-lambda=1.2
-swr=0.
-sgr=0.
-m=0.25
-beta=1.
-
-[hydrate_phase_change]
-dissociation_rate=1.e-17
-formation_rate=1.e-17
-
-[sedimentation]
-burial_rate=0.1
+[reference_state]
+salinity=0.
+temperature=10.
 
 [gravity]
 flag=true
 magnitude=9.81
-
-#################
-# UNITS
-#################
-# m -> grid.ug.LZ, grid.ug.LX, free_gas_pocket.depth_below_BSR, free_gas_pocket.thickness, free_gas_pocket.width, fracture.diameter, fracture.depth, paleo_conditions.BSR_depth, sediment.layer.z
-# kilo-annum -> initial_problem.dt_initial, initial_problem.time_end, 
-# kilo-annum -> time.dt_initial, time.time_end,
-# kilo-annum -> adaptive_time_control.dt_min, adaptive_time_control.dt_max, 
-# kilo-annum -> output.time_interval
-# sedimentation.burial_rate -> cm/year
-# paleo_conditions.sea_floor_pressure -> MPa
-# paleo_conditions.sea_floor_temperature -> degC
-# paleo_conditions.regional_temperature_gradient -> degC/km
-# abs_permeability -> m^2
-# entry_pressure -> Pa
-# dissociation_rate, formation_rate -> mol/m^2.Pa.s
-
-#################
-# NOTES
-#################
-#sediment.layerN.z -> denotes location of the bottom of a Nth layer 
-#layer numbering: example with N=3
-#	Zmax___________
-#			|
-#			|
-#			| layer0
-#			|
-#		____|______ z0
-#			|
-#			|
-#			| layer1
-#			|
-#	    ____|______ z1
-#			|
-#			|
-#			| layer2
-#			|
-#    z=0____|______ z2
-#
-# The sediment properties (porosity, permeability,capillary pressure) can be defined horizontal layerwise (as before). 
-# The fracture will cut through the defined layers. The fracture properties are inactive during the initial problem.
-#
-# IMPORTANT!!
-# The mesh is optimized for fracture diameter upto 50m (so, fracture.diameter<=50m), and (BSR_depth+fgp.depth_below_BSR+fgp.thickness<=460m).
