--- a/dune/Hydrate-DG/akerbp2D_pockmark/properties/CMakeLists.txt
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/properties/CMakeLists.txt
@@ -1,6 +1,7 @@
 #install headers
 install(FILES CH4.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark/properties)
 install(FILES eosCH4.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark/properties)
+install(FILES H2O.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark/properties)
 install(FILES hydrate_phase_change.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark/properties)
 install(FILES hydrate.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark/properties)
 install(FILES hydraulic_properties.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG/akerbp2D_pockmark/properties)
