alpha volume changed- convective and diff flux defined as Shubhangi code

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -18,28 +18,29 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=7200.
-time_end=72000.
+dt_initial=10.
+time_end=3600000.
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-2
-dt_max=7200.
-max_newton_steps=8
+dt_max=3600.
+max_newton_steps=12
 min_newton_steps=4
 
 [output]
 path_name=tests_202002
-file_name=test0
-time_interval=7200.
+file_name=testDegree1
+time_interval=3600
 
 [newton]
 max_iterations=12
-abs_error=1.e-6
+abs_error=1.e-5
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 3 # be verbose
-reduction = 1.e-4 # total reduction
-min_linear_reduction = 1.e-4 # min. red. in linear solve
+reduction = 1.e-5 # total reduction
+min_linear_reduction = 1.e-5 # min. red. in linear solve
+line_search_strategy = noLineSearch# hackbuschReusken
 
 [newton.line_search]
 line_search_max_iterations = 40 # limit linea search iterations
@@ -97,7 +98,7 @@ beta=1.
 
 [reference_state]
 salinity=0.
-temperature=10.
+temperature=4.
 
 [gravity]
 flag=true
