--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/home/amir/dune-master/Hydrate-DG/dune/Hydrate-DG/akerbp2D_pockmark/outputs/*
-/build/*
-/.vscode/*
+dune/Hydrate-DG/akerbp2D_pockmark/outputs/*
+build/*
+.vscode/*
