--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -18,7 +18,7 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=100.
+dt_initial=10.
 time_end=3600000.
 
 [adaptive_time_control]
@@ -30,17 +30,17 @@ min_newton_steps=4
 
 [output]
 path_name=tests_202002
-file_name=testDegree1
-time_interval=100
+file_name=testDegree1-woPenalty
+time_interval=10
 
 [newton]
 max_iterations=12
-abs_error=1.e-5
+abs_error=1.e-4
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 3 # be verbose
-reduction = 1.e-5 # total reduction
-min_linear_reduction = 1.e-5 # min. red. in linear solve
-line_search_strategy = noLineSearch# hackbuschReusken
+reduction = 1.e-4 # total reduction
+min_linear_reduction = 1.e-4 # min. red. in linear solve
+line_search_strategy = noLineSearch #hackbuschReusken
 
 [newton.line_search]
 line_search_max_iterations = 40 # limit linea search iterations
