--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -18,7 +18,7 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=10.
+dt_initial=1.
 time_end=3600000.
 
 [adaptive_time_control]
@@ -30,27 +30,27 @@ min_newton_steps=4
 
 [output]
 path_name=tests_202002
-file_name=testDegree1-woPenalty
-time_interval=10
+file_name=testDegree0-woPenalty-
+time_interval=1
 
 [newton]
 max_iterations=12
-abs_error=1.e-4
+abs_error=1.e-5
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 3 # be verbose
-reduction = 1.e-4 # total reduction
-min_linear_reduction = 1.e-4 # min. red. in linear solve
-line_search_strategy = noLineSearch #hackbuschReusken
+reduction = 1.e-5 # total reduction
+min_linear_reduction = 1.e-5 # min. red. in linear solve
+line_search_strategy = hackbuschReusken
 
 [newton.line_search]
 line_search_max_iterations = 40 # limit linea search iterations
 
 [initial]
-Sg=0.0
+Sg=0.01
 Pw=2.e6
 Sh=0.3
-YH2O=0.0005
-XCH4=0.
+YH2O=0.00051219
+XCH4=0.0000124
 XC=0.0055
 T=4.
 
