Upwind Scheme implemented without VLE

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=20
+NX=30
 LZ=1.
-NZ=20
+NZ=30
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,8 +18,8 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=1.
-time_end=3600000.
+dt_initial=0.1
+time_end=36000.
 
 [adaptive_time_control]
 flag=true
@@ -30,27 +30,27 @@ min_newton_steps=4
 
 [output]
 path_name=tests_202002
-file_name=testDegree1-woPenalty-Correctsign
+file_name=Deg1-sym-wPenalty-woVLE-Upwind
 time_interval=1
 
 [newton]
-max_iterations=12
-abs_error=1.e-5
+max_iterations=15
+abs_error=1.e-4
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 3 # be verbose
-reduction = 1.e-5 # total reduction
+reduction = 1.e-4 # total reduction
 min_linear_reduction = 1.e-5 # min. red. in linear solve
 line_search_strategy = hackbuschReusken
 
 [newton.line_search]
-line_search_max_iterations = 40 # limit linea search iterations
+line_search_max_iterations = 100 # limit linea search iterations
 
 [initial]
 Sg=0.0
 Pw=2.e6
 Sh=0.3
 YH2O=0.00051219
-XCH4=0.0000124
+XCH4=0.0
 XC=0.0055
 T=4.
 
@@ -98,7 +98,7 @@ beta=1.
 
 [reference_state]
 salinity=0.
-temperature=4.
+temperature=0.
 
 [gravity]
 flag=true
