--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -18,7 +18,7 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=1.
+dt_initial=60.
 time_end=36000.
 
 [adaptive_time_control]
@@ -31,7 +31,7 @@ min_newton_steps=4
 [output]
 path_name=tests_202002
 file_name=Deg1-sym-wPenalty-woVLE-Upwind
-time_interval=1
+time_interval=360
 
 [newton]
 max_iterations=15
@@ -40,7 +40,7 @@ reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 3 # be verbose
 reduction = 1.e-6 # total reduction
 min_linear_reduction = 1.e-6 # min. red. in linear solve
-line_search_strategy = hackbuschReusken
+line_search_strategy = noLineSearch#hackbuschReusken
 
 [newton.line_search]
 line_search_max_iterations = 100 # limit linea search iterations
