last edition without Jacobian

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=32
+NX=20
 LZ=1.
-NZ=32
+NZ=20
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,29 +18,30 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=60.
-time_end=36000.
+dt_initial=600.
+time_end=2.16e6
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-2
 dt_max=3600.
 max_newton_steps=12
-min_newton_steps=4
+min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=Deg1-sym-wPenalty-woVLE-Upwind
-time_interval=360
+file_name=Example1
+time_interval=3600
 
 [newton]
 max_iterations=15
-abs_error=1.e-5
+abs_error=1.e-4
 reassemble_treshhold = 0.0 # always reassemble J
-verbosity = 3 # be verbose
-reduction = 1.e-6 # total reduction
-min_linear_reduction = 1.e-6 # min. red. in linear solve
+verbosity = 2 # be verbose
+reduction = 1.e-4 # total reduction
+min_linear_reduction = 1.e-5 # min. red. in linear solve
 line_search_strategy = noLineSearch#hackbuschReusken
+force_iterations = true
 
 [newton.line_search]
 line_search_max_iterations = 100 # limit linea search iterations
@@ -101,5 +102,5 @@ salinity=0.
 temperature=0.
 
 [gravity]
-flag=true
+flag=false
 magnitude=9.81
