jacubian_volume added

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -18,7 +18,7 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=600.
+dt_initial=0.01
 time_end=2.16e6
 
 [adaptive_time_control]
@@ -30,7 +30,7 @@ min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=Example1
+file_name=testJacobian
 time_interval=3600
 
 [newton]
