Changes made with Shubhangi-14-07

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=20
+NX=40
 LZ=1.
-NZ=20
+NZ=40
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,20 +18,20 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=0.01
+dt_initial=1000.
 time_end=2.16e6
 
 [adaptive_time_control]
 flag=true
-dt_min=1.e-2
+dt_min=1.e2
 dt_max=3600.
 max_newton_steps=12
 min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=testJacobian
-time_interval=3600
+file_name=testJacobianVolume
+time_interval=7200
 
 [newton]
 max_iterations=15
