Better alpha BC

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=40
+NX=64
 LZ=1.
-NZ=40
+NZ=64
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,20 +18,20 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=1000.
+dt_initial=100.
 time_end=2.16e6
 
 [adaptive_time_control]
 flag=true
-dt_min=1.e2
-dt_max=3600.
+dt_min=1.e1
+dt_max=300.
 max_newton_steps=12
 min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=testJacobianVolume
-time_interval=7200
+file_name=test-64by64
+time_interval=600
 
 [newton]
 max_iterations=15
@@ -39,7 +39,7 @@ abs_error=1.e-4
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
 reduction = 1.e-4 # total reduction
-min_linear_reduction = 1.e-5 # min. red. in linear solve
+min_linear_reduction = 1.e-3 # min. red. in linear solve
 line_search_strategy = noLineSearch#hackbuschReusken
 force_iterations = true
 
