upwind for T and XC

--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=64
+NX=40
 LZ=1.
-NZ=64
+NZ=40
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -30,7 +30,7 @@ min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=test-64by64
+file_name=testJacobianVolume
 time_interval=600
 
 [newton]
