--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=40
+NX=48
 LZ=1.
-NZ=40
+NZ=48
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,20 +18,20 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=100.
+dt_initial=300.
 time_end=2.16e6
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e1
-dt_max=300.
+dt_max=600.
 max_newton_steps=12
 min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=testJacobianVolume
-time_interval=600
+file_name=test1
+time_interval=1200
 
 [newton]
 max_iterations=15
