--- a/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
+++ b/dune/Hydrate-DG/akerbp2D_pockmark/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=48
+NX=20
 LZ=1.
-NZ=48
+NZ=20
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,28 +18,30 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=300.
+dt_initial=600.
 time_end=2.16e6
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e1
-dt_max=600.
+dt_max=900.
 max_newton_steps=12
 min_newton_steps=8
 
 [output]
 path_name=tests_202002
 file_name=test1
-time_interval=1200
+time_interval=1800
 
+
+# (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 max_iterations=15
-abs_error=1.e-4
+abs_error=1.e0
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
-reduction = 1.e-4 # total reduction
-min_linear_reduction = 1.e-3 # min. red. in linear solve
+reduction = 1.e-6 # total reduction
+min_linear_reduction = 1.e-8 # min. red. in linear solve 
 line_search_strategy = noLineSearch#hackbuschReusken
 force_iterations = true
 
