--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=16
+NX=12
 LZ=1.
-NZ=16
+NZ=12
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,20 +18,20 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=900.
-time_end=1.08e5
+dt_initial=60.
+time_end=2.16e4
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-2
-dt_max=900.
+dt_max=600.
 max_newton_steps=10
 min_newton_steps=8
 
 [output]
 path_name=tests_202002
-file_name=test3
-time_interval=900
+file_name=test4
+time_interval=600
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
@@ -50,7 +50,7 @@ line_search_max_iterations = 100 # limit linea search iterations
 
 [initial]
 Sg=0.0
-Pw=2.e6
+Pw=2.02e6
 Sh=0.3
 YH2O=0.00051219
 XCH4=0.0
@@ -66,7 +66,7 @@ number_of_materials=1
 
 [sediment.material0]
 por=0.3
-K=1.e-12
+K=1.e-13
 pentry=50000.
 lambda=1.2
 swr=0.
@@ -74,11 +74,12 @@ sgr=0.
 m=3.
 beta=1.
 
+
 [initial_problem]
 dt_initial=0.01
 time_end=10
-hydrate_formation_rate=1e-12
-hydrate_dissociation_rate=1.e-12
+hydrate_formation_rate=1e-13
+hydrate_dissociation_rate=1.e-14
 salinity=0.025
 porosity=0.5
 abs_permeability=1e-15
@@ -102,6 +103,7 @@ beta=1.
 [reference_state]
 salinity=0.
 temperature=0.
+pressure=1.01e5
 
 [gravity]
 flag=false
