--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=12
+NX=16
 LZ=1.
-NZ=12
+NZ=16
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -18,30 +18,30 @@ Zmin=0.2
 Zmax=0.3
 
 [time]
-dt_initial=60.
-time_end=2.16e4
+dt_initial=1200.
+time_end=2.16e4 # just needed to change the time_end
 
 [adaptive_time_control]
 flag=true
-dt_min=1.e-2
-dt_max=600.
-max_newton_steps=10
-min_newton_steps=8
+dt_min=1.e0
+dt_max=3600.
+max_newton_steps=8
+min_newton_steps=4
 
 [output]
 path_name=tests_202002
-file_name=test4
-time_interval=600
+file_name=test3
+time_interval=3600
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-max_iterations=12
-abs_error=1.e0
+max_iterations=10
+abs_error=5.e-2
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
-reduction = 1.e-3 # total reduction
-min_linear_reduction = 1.e-8 # min. red. in linear solve 
+reduction = 1.e-7 # total reduction
+min_linear_reduction = 1.e-9 # min. red. in linear solve 
 line_search_strategy = noLineSearch#hackbuschReusken
 force_iterations = true
 
@@ -56,6 +56,10 @@ YH2O=0.00051219
 XCH4=0.0
 XC=0.0055
 T=4.
+
+[hydrate_phase_change]
+dissociation_rate = 1.e-14
+formation_rate = 1.e-13
 
 [boundary]
 Pw_at_left=1.5e6
@@ -78,7 +82,7 @@ beta=1.
 [initial_problem]
 dt_initial=0.01
 time_end=10
-hydrate_formation_rate=1e-13
+hydrate_formation_rate=2.e-13
 hydrate_dissociation_rate=1.e-14
 salinity=0.025
 porosity=0.5
