--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=40
+NX=20
 LZ=1.
-NZ=40
+NZ=20
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -29,24 +29,24 @@ max_newton_steps=8
 min_newton_steps=4
 
 [output]
-path_name=tests_202002
-file_name=test5
+path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/BM_phasechange_0d/
+file_name=test4
 time_interval=3600
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-max_iterations=12
-abs_error=1.e-9
+max_iterations=10
+abs_error=1.e-7
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
-reduction = 5.e-7 # total reduction
-min_linear_reduction = 1.e-8 # min. red. in linear solve 
-line_search_strategy = noLineSearch#hackbuschReusken
+reduction = 1.e-5 # total reduction
+min_linear_reduction = 1.e-10 # min. red. in linear solve 
+line_search_strategy = hackbuschReusken#noLineSearch#hackbuschReuskenAcceptBest
 force_iterations = true
 
 [newton.line_search]
-line_search_max_iterations = 100 # limit linea search iterations
+line_search_max_iterations = 10 # limit linea search iterations
 
 [initial]
 Sg=0.0
