--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,12 +1,12 @@
 [grid]
 worlddim=2
 LX=1000.
-NX=30
+NX=101
 LZ=-610.
-NZ=30
+NZ=62
 
 [grid.alugrid]
-name=grid-Ex2-equi.msh
+name=grid-Ex3-ndim-equidist.msh
 LX=1000.
 LZ=-610.
 
@@ -23,39 +23,39 @@ Zmax=0.
 
 [grid.ghsz]
 Ztop=-420.
-Zbottom=-480.
+Zbottom=-500.
 Xleft=0.
 Xright=1000.
 
 # time should be in years
 [time]
-dt_initial=1. #     3.1536e7
+dt_initial=100. #     3.1536e7
 time_end=300000 # 9.4608e12 # just needed to change the time_end 
 T_end =300000 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-9
-dt_max=1. # 3.1536e9
+dt_max=100. # 3.1536e9
 max_newton_steps=6
 min_newton_steps=4
 
 [output]
-path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/outputs/
-file_name=test1
-time_interval=1 # 3153600000
+path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
+file_name=test3
+time_interval=100 # 3153600000
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 max_iterations=10
-abs_error=1.e-10
+abs_error=1.e-3
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
-reduction = 5.e-9 # total reduction
-min_linear_reduction = 1.e-12 # min. red. in linear solve
+reduction = 1.e-3 # total reduction
+min_linear_reduction = 1.e-6 # min. red. in linear solve
 max_linear_iteration = 100  
-line_search_strategy = noLineSearch # hackbuschReusken
+line_search_strategy = hackbuschReusken # noLineSearch
 force_iterations = true
 
 [newton.line_search]
@@ -87,8 +87,8 @@ number_of_materials=2
 number_of_layers=1
 
 [sediment.material0]
-por=0.3
-K=1.e-15
+por=0.5
+K=1.e-16
 pentry=50000.
 lambda=1.2
 swr=0.
