--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable("hydrateDG-Ex1" hydrateDG-Ex1.cc)
-target_link_dune_default_libraries("hydrateDG-Ex1")
+add_executable("BM_phasechange" BM_phasechange.cc)
+target_link_dune_default_libraries("BM_phasechange")
 add_executable("ex2" Ex2.cc)
 target_link_dune_default_libraries("ex2")
