--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,12 +1,12 @@
 [grid]
 worlddim=2
 LX=1000.
-NX=101
+NX=201
 LZ=-610.
-NZ=62
+NZ=123
 
 [grid.alugrid]
-name=grid-Ex3-ndim-equidist.msh
+name=grid-Ex2-Finer-equi.msh
 LX=1000.
 LZ=-610.
 
@@ -29,21 +29,21 @@ Xright=1000.
 
 # time should be in years
 [time]
-dt_initial=100. #     3.1536e7
+dt_initial=1. #     3.1536e7
 time_end=300000 # 9.4608e12 # just needed to change the time_end 
 T_end =300000 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-9
-dt_max=100. # 3.1536e9
+dt_max=1. # 3.1536e9
 max_newton_steps=6
 min_newton_steps=4
 
 [output]
-path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
+path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
 file_name=test3
-time_interval=100 # 3153600000
+time_interval=1 # 3153600000
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
