--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,59 +1,59 @@
 [grid]
 worlddim=2
-LX=1000.
-NX=201
+LX=100.
+NX=51
 LZ=-610.
-NZ=123
+NZ=303
 
 [grid.alugrid]
 name=grid-Ex2-Finer-equi.msh
-LX=1000.
+LX=100.
 LZ=-610.
 
 [grid.ug]
 name=grid.msh
-LX=1000.
+LX=100.
 LZ=-610.
 
 [grid.lens]
-Xmin=500
+Xmin=48
 Zmin=-400
-Xmax=550
+Xmax=52
 Zmax=0.
 
 [grid.ghsz]
-Ztop=-420.
-Zbottom=-500.
+Ztop=-400.
+Zbottom=-480.
 Xleft=0.
-Xright=1000.
+Xright=100.
 
 # time should be in years
 [time]
-dt_initial=1. #     3.1536e7
+dt_initial=1.e-1 #     3.1536e7
 time_end=300000 # 9.4608e12 # just needed to change the time_end 
 T_end =300000 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-9
-dt_max=1. # 3.1536e9
+dt_max=1.e0 # 3.1536e9
 max_newton_steps=6
 min_newton_steps=4
 
 [output]
-path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test3
+path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
+file_name=test1
 time_interval=1 # 3153600000
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 max_iterations=10
-abs_error=1.e-3
+abs_error=1.e-7
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
-reduction = 1.e-3 # total reduction
-min_linear_reduction = 1.e-6 # min. red. in linear solve
+reduction = 1.e-6 # total reduction
+min_linear_reduction = 1.e-9 # min. red. in linear solve
 max_linear_iteration = 100  
 line_search_strategy = hackbuschReusken # noLineSearch
 force_iterations = true
@@ -98,7 +98,7 @@ beta=1.
 
 [sediment.material1]
 por=0.3
-K=1.e-15
+K=1.e-12
 pentry=50000.
 lambda=1.2
 swr=0.
