--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -19,7 +19,7 @@ Zmax=0.3
 
 [time]
 dt_initial=1200.
-time_end=2.16e4 # just needed to change the time_end
+time_end=2.16e6 # just needed to change the time_end
 
 [adaptive_time_control]
 flag=true
@@ -29,24 +29,38 @@ max_newton_steps=8
 min_newton_steps=4
 
 [output]
-path_name=tests_202002
-file_name=test3
+path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/BM_phasechange_0d/
+file_name=test1
 time_interval=3600
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-max_iterations=10
-abs_error=5.e-2
-reassemble_treshhold = 0.0 # always reassemble J
-verbosity = 2 # be verbose
-reduction = 1.e-7 # total reduction
-min_linear_reduction = 1.e-9 # min. red. in linear solve 
-line_search_strategy = noLineSearch#hackbuschReusken
-force_iterations = true
+AbsoluteLimit = 5.e-2
+Reduction = 1.e0 # total reduction
+minLinearReduction = 1.e-6 # min. red. in linear solve
+maxLinearIteration = 100  
+LineSearchStrategy = noLineSearch # hackbuschReusken # boundedHackbuschReusken # boundedNoLineSearch #  
+forceIterations = true
+MaxIterations = 12 
+ForceIteration = true
+fixedLinearReduction = false
+reassembleThreshold = 0.
+useMaxNorm = false
+VerbosityLevel = 2
+#keepMatrix = true
 
-[newton.line_search]
-line_search_max_iterations = 100 # limit linea search iterations
+[newton.LineSearch]
+MaxIterations = 100 # limit linea search iterations
+DampingFactor = 1.
+AcceptBest = false
+LowerBound1 = -1.e-12
+LowerBound4 = -1.e-12
+LowerBound5 = -1.e-12
+LowerBound6 = -1.e-12
+NumberOfRestraints=4
+
+
 
 [initial]
 Sg=0.0
@@ -58,7 +72,7 @@ XC=0.0055
 T=4.
 
 [hydrate_phase_change]
-dissociation_rate = 1.e-14
+dissociation_rate = 1.15e-14
 formation_rate = 1.e-13
 
 [boundary]
