--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -36,11 +36,11 @@ time_interval=3600
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 5.e-2
-Reduction = 1.e0 # total reduction
-minLinearReduction = 1.e-6 # min. red. in linear solve
+AbsoluteLimit = 5.e-6
+Reduction = 9.e-1 # total reduction
+minLinearReduction = 1.e-7 # min. red. in linear solve
 maxLinearIteration = 100  
-LineSearchStrategy = noLineSearch # hackbuschReusken # boundedHackbuschReusken # boundedNoLineSearch #  
+LineSearchStrategy = boundedHackbuschReusken # noLineSearch # hackbuschReusken # boundedNoLineSearch #  
 forceIterations = true
 MaxIterations = 12 
 ForceIteration = true
@@ -54,10 +54,10 @@ VerbosityLevel = 2
 MaxIterations = 100 # limit linea search iterations
 DampingFactor = 1.
 AcceptBest = false
-LowerBound1 = -1.e-12
-LowerBound4 = -1.e-12
-LowerBound5 = -1.e-12
-LowerBound6 = -1.e-12
+LowerBound1 = -1.e-16
+LowerBound4 = -1.e-16
+LowerBound5 = -1.e-16
+LowerBound6 = -1.e-16
 NumberOfRestraints=4
 
 
