--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -30,17 +30,17 @@ min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/BM_phasechange_0d/
-file_name=test1
+file_name=test0
 time_interval=3600
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 5.e-6
+AbsoluteLimit = 1.e-5
 Reduction = 9.e-1 # total reduction
 minLinearReduction = 1.e-7 # min. red. in linear solve
 maxLinearIteration = 100  
-LineSearchStrategy = boundedHackbuschReusken # noLineSearch # hackbuschReusken # boundedNoLineSearch #  
+LineSearchStrategy = noLineSearch # hackbuschReusken # boundedHackbuschReusken # boundedNoLineSearch #  
 forceIterations = true
 MaxIterations = 12 
 ForceIteration = true
