--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -36,23 +36,23 @@ T_end =3.e5 # 9.4608e12#3.1536e7
 [adaptive_time_control]
 flag=true
 dt_min=1.e-7
-dt_max=1.e1 # 3.1536e9
+dt_max=1.e2 # 3.1536e9
 max_newton_steps=8
 min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
 file_name=test
-time_interval=1.e1 # 3153600000
+time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-6
-Reduction = 1.e-2 # total reduction
-minLinearReduction = 1.e-9 # min. red. in linear solve
+AbsoluteLimit = 1.e-3
+Reduction = 1.e-1 # total reduction
+minLinearReduction = 1.e-6 # min. red. in linear solve
 maxLinearIteration = 10  
-LineSearchStrategy = hackbuschReusken # boundedNoLineSearch # noLineSearch #  boundedHackbuschReusken # 
+LineSearchStrategy = boundedHackbuschReusken # noLineSearch # hackbuschReusken # boundedNoLineSearch #  
 forceIterations = true
 MaxIterations = 12 
 ForceIteration = true
@@ -66,10 +66,10 @@ VerbosityLevel = 2
 MaxIterations = 100 # limit linea search iterations
 DampingFactor = 1.
 AcceptBest = false
-LowerBound1 = -1.e-9
-LowerBound4 = -1.e-9
-LowerBound5 = -1.e-9
-LowerBound6 = -1.e-9
+LowerBound1 = -1.e-16
+LowerBound4 = -1.e-16
+LowerBound5 = -1.e-16
+LowerBound6 = -1.e-16
 NumberOfRestraints=4
 
 
