editted YCH4 and vg and vw on the skeleton

--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,18 +1,18 @@
 [grid]
 worlddim=2
-LX=10.
-NX=5
+LX=8.
+NX=3
 LZ=-500.
 NZ=250
 
 [grid.alugrid]
 name=grid-10-500.msh
-LX=10.
+LX=8.
 LZ=-500.
 
 [grid.ug]
 name=grid.msh
-LX=10.
+LX=8.
 LZ=-500.
 
 [grid.lens]
@@ -25,34 +25,34 @@ Zmax=0.
 Ztop=-320.
 Zbottom=-400.
 Xleft=0.
-Xright=10.
+Xright=8.
 
 ; # time should be in years
 [time]
-dt_initial= 1.e-1#     3.1104e7
+dt_initial= 1.e-3#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-7
-dt_max=1.e2 # 3.1536e9
+dt_max=1.e0 # 3.1536e9
 max_newton_steps=8
 min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test
+file_name=test-p1-T1
 time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-3
-Reduction = 1.e-1 # total reduction
-minLinearReduction = 1.e-6 # min. red. in linear solve
+AbsoluteLimit = 1.e-6
+Reduction = 9.e-1 # total reduction
+minLinearReduction = 1.e-9 # min. red. in linear solve
 maxLinearIteration = 10  
-LineSearchStrategy = boundedHackbuschReusken # noLineSearch # hackbuschReusken # boundedNoLineSearch #  
+LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken # boundedNoLineSearch #  
 forceIterations = true
 MaxIterations = 12 
 ForceIteration = true
@@ -63,7 +63,7 @@ VerbosityLevel = 2
 ; #keepMatrix = true
 
 [newton.LineSearch]
-MaxIterations = 100 # limit linea search iterations
+MaxIterations = 10 # limit linea search iterations
 DampingFactor = 1.
 AcceptBest = false
 LowerBound1 = -1.e-16
@@ -84,7 +84,7 @@ Sh=0.0
 YH2O=0.00051219
 XCH4=0.0
 XC=0.0055
-T=4.5
+T=4.
 
 
 [grad]
