--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -42,7 +42,7 @@ min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test-p1-T1
+file_name=test3
 time_interval=1.e2 # 3153600000
 
 
