BC Velocity editted

--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,9 +1,9 @@
 [grid]
 worlddim=2
 LX=8.
-NX=3
+NX=4
 LZ=-500.
-NZ=250
+NZ=750
 
 [grid.alugrid]
 name=grid-10-500.msh
@@ -29,7 +29,7 @@ Xright=8.
 
 ; # time should be in years
 [time]
-dt_initial= 1.e-2#     3.1104e7
+dt_initial= 1.e0#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
@@ -49,7 +49,7 @@ time_interval=1.e2 # 3153600000
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 AbsoluteLimit = 1.e-6
-Reduction = 9.e-1 # total reduction
+Reduction = 1.e-6 # total reduction
 minLinearReduction = 1.e-9 # min. red. in linear solve
 maxLinearIteration = 10  
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken # boundedNoLineSearch #  
@@ -64,7 +64,7 @@ VerbosityLevel = 2
 
 [newton.LineSearch]
 MaxIterations = 10 # limit linea search iterations
-DampingFactor = 1.
+DampingFactor = 0.5
 AcceptBest = false
 LowerBound1 = -1.e-16
 LowerBound4 = -1.e-16
