--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,35 +1,35 @@
 [grid]
 worlddim=2
-LX=8.
-NX=4
+LX=10
+NX=1
 LZ=-500.
-NZ=1000
+NZ=50
 
 [grid.alugrid]
-name=grid-10-500.msh
-LX=8.
+name=oneD.msh
+LX=10
 LZ=-500.
 
 [grid.ug]
 name=grid.msh
-LX=8.
+LX=10
 LZ=-500.
 
 [grid.lens]
-Xmin=.1
+Xmin=.01
 Zmin=-400
-Xmax=.15
+Xmax=.015
 Zmax=0.
 
 [grid.ghsz]
 Ztop=-320.
 Zbottom=-400.
 Xleft=0.
-Xright=8.
+Xright=10.
 
 ; # time should be in years
 [time]
-dt_initial= 1.e0#     3.1104e7
+dt_initial= 1.e-1#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
@@ -48,11 +48,11 @@ time_interval=1.e2 # 3153600000
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-6
-Reduction = 1.e-6 # total reduction
+AbsoluteLimit = 1.e-9
+Reduction = 1.e-9 # total reduction
 minLinearReduction = 1.e-9 # min. red. in linear solve
 maxLinearIteration = 10  
-LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken # boundedNoLineSearch #  
+LineSearchStrategy = hackbuschReusken # boundedHackbuschReusken # noLineSearch # boundedNoLineSearch #  
 forceIterations = true
 MaxIterations = 12 
 ForceIteration = true
@@ -66,10 +66,10 @@ VerbosityLevel = 2
 MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-LowerBound1 = -1.e-16
-LowerBound4 = -1.e-16
-LowerBound5 = -1.e-16
-LowerBound6 = -1.e-16
+LowerBound1 = 0.e0
+LowerBound4 = 0.e0
+LowerBound5 = 0.e0
+LowerBound6 = 0.e0
 NumberOfRestraints=4
 
 
