--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,9 +1,9 @@
 [grid]
 worlddim=2
 LX=10
-NX=1
+NX=5
 LZ=-500.
-NZ=50
+NZ=250
 
 [grid.alugrid]
 name=oneD.msh
@@ -25,24 +25,24 @@ Zmax=0.
 Ztop=-320.
 Zbottom=-400.
 Xleft=0.
-Xright=10.
+Xright=10
 
 ; # time should be in years
 [time]
-dt_initial= 1.e-1#     3.1104e7
+dt_initial= 1.e0#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-7
-dt_max=5.e1 # 3.1536e9
+dt_max=5.e0 # 3.1536e9
 max_newton_steps=8
 min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test3
+file_name=test-p1-T1
 time_interval=1.e2 # 3153600000
 
 
@@ -50,11 +50,10 @@ time_interval=1.e2 # 3153600000
 [newton]
 AbsoluteLimit = 1.e-9
 Reduction = 1.e-9 # total reduction
-minLinearReduction = 1.e-9 # min. red. in linear solve
+minLinearReduction = 1.e-12 # min. red. in linear solve
 maxLinearIteration = 10  
 LineSearchStrategy = hackbuschReusken # boundedHackbuschReusken # noLineSearch # boundedNoLineSearch #  
-forceIterations = true
-MaxIterations = 12 
+MaxIterations = 15 
 ForceIteration = true
 fixedLinearReduction = false
 reassembleThreshold = 0.
@@ -66,11 +65,11 @@ VerbosityLevel = 2
 MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-LowerBound1 = 0.e0
+; #LowerBound1 = 0.e0
 LowerBound4 = 0.e0
-LowerBound5 = 0.e0
-LowerBound6 = 0.e0
-NumberOfRestraints=4
+; LowerBound5 = 0.e0
+; LowerBound6 = 0.e0
+NumberOfRestraints=1
 
 
 [hydrate_phase_change]
