diffusion sum should be zero

--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -3,9 +3,9 @@ worlddim=2
 
 [grid.yasp]
 LX=1.
-NX=20
+NX=16
 LZ=1.
-NZ=20
+NZ=16
 
 [grid.yasp.lens]
 Xmin=0.4
@@ -36,23 +36,22 @@ time_interval=3600
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-5
-Reduction = 9.e-1 # total reduction
-minLinearReduction = 1.e-7 # min. red. in linear solve
-maxLinearIteration = 100  
-LineSearchStrategy = noLineSearch # hackbuschReusken # boundedHackbuschReusken # boundedNoLineSearch #  
-forceIterations = true
-MaxIterations = 12 
+AbsoluteLimit = 5.e-2
+Reduction = 5.e-4 # total reduction
+MinLinearReduction = 1.e-7 # min. red. in linear solve
+MaxLinearIteration = 100  
+LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken # boundedNoLineSearch #  
 ForceIteration = true
-fixedLinearReduction = false
-reassembleThreshold = 0.
-useMaxNorm = false
+MaxIterations = 12 
+FixedLinearReduction = false
+ReassembleThreshold = 0.
+UseMaxNorm = false
 VerbosityLevel = 2
 #keepMatrix = true
 
 [newton.LineSearch]
 MaxIterations = 100 # limit linea search iterations
-DampingFactor = 1.
+DampingFactor = 0.5
 AcceptBest = false
 LowerBound1 = -1.e-16
 LowerBound4 = -1.e-16
