--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,18 +1,18 @@
 [grid]
 worlddim=2
-LX=10
-NX=5
+LX=1
+NX=1
 LZ=-500.
-NZ=250
+NZ=1000
 
 [grid.alugrid]
 name=oneD.msh
-LX=10
+LX=1
 LZ=-500.
 
 [grid.ug]
 name=grid.msh
-LX=10
+LX=1
 LZ=-500.
 
 [grid.lens]
@@ -25,20 +25,20 @@ Zmax=0.
 Ztop=-320.
 Zbottom=-400.
 Xleft=0.
-Xright=10
+Xright=1
 
 ; # time should be in years
 [time]
-dt_initial= 1.e0#     3.1104e7
+dt_initial= 1.e-1#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-7
-dt_max=5.e0 # 3.1536e9
-max_newton_steps=8
-min_newton_steps=4
+dt_max=1.e2 # 3.1536e9
+max_newton_steps=10
+min_newton_steps=6
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
@@ -48,16 +48,16 @@ time_interval=1.e2 # 3153600000
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-9
-Reduction = 1.e-9 # total reduction
-minLinearReduction = 1.e-12 # min. red. in linear solve
-maxLinearIteration = 10  
+AbsoluteLimit = 1.e-6
+Reduction = 1.e-8 # total reduction
+MinLinearReduction = 1.e-9 # min. red. in linear solve
+MaxLinearIteration = 10  
 LineSearchStrategy = hackbuschReusken # boundedHackbuschReusken # noLineSearch # boundedNoLineSearch #  
 MaxIterations = 15 
 ForceIteration = true
-fixedLinearReduction = false
-reassembleThreshold = 0.
-useMaxNorm = false
+FixedLinearReduction = true
+ReassembleThreshold = 0.
+UseMaxNorm = false
 VerbosityLevel = 2
 ; #keepMatrix = true
 
@@ -82,7 +82,7 @@ Pw=15.e6
 Sh=0.0
 YH2O=0.00051219
 XCH4=0.0
-XC=0.0055
+XC=0.0096
 T=4.
 
 
@@ -113,7 +113,7 @@ pentry=50000.
 lambda=1.2
 swr=0.
 sgr=0.
-m=3.
+m=1.
 beta=1.
 
 
