diffusion sign corrected

--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,9 +1,9 @@
 [grid]
-worlddim=2
+worlddim=1
 LX=1
 NX=1
 LZ=-500.
-NZ=1000
+NZ=250
 
 [grid.alugrid]
 name=oneD.msh
@@ -42,7 +42,7 @@ min_newton_steps=6
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test-p1-T1
+file_name=test3
 time_interval=1.e2 # 3153600000
 
 
@@ -50,12 +50,12 @@ time_interval=1.e2 # 3153600000
 [newton]
 AbsoluteLimit = 1.e-6
 Reduction = 1.e-8 # total reduction
-MinLinearReduction = 1.e-9 # min. red. in linear solve
+MinLinearReduction = 1.e-3 # min. red. in linear solve
 MaxLinearIteration = 10  
-LineSearchStrategy = hackbuschReusken # boundedHackbuschReusken # noLineSearch # boundedNoLineSearch #  
+LineSearchStrategy = hackbuschReusken #  boundedHackbuschReusken # noLineSearch #  boundedNoLineSearch #  
 MaxIterations = 15 
 ForceIteration = true
-FixedLinearReduction = true
+FixedLinearReduction = false
 ReassembleThreshold = 0.
 UseMaxNorm = false
 VerbosityLevel = 2
@@ -65,7 +65,7 @@ VerbosityLevel = 2
 MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-; #LowerBound1 = 0.e0
+# LowerBound1 = 0.e0
 LowerBound4 = 0.e0
 ; LowerBound5 = 0.e0
 ; LowerBound6 = 0.e0
@@ -83,7 +83,7 @@ Sh=0.0
 YH2O=0.00051219
 XCH4=0.0
 XC=0.0096
-T=4.
+T=4.6
 
 
 [grad]
