--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -36,7 +36,7 @@ T_end =3.e5 # 9.4608e12#3.1536e7
 [adaptive_time_control]
 flag=true
 dt_min=1.e-7
-dt_max=1.e2 # 3.1536e9
+dt_max=1.e1 # 3.1536e9
 max_newton_steps=10
 min_newton_steps=6
 
@@ -48,11 +48,11 @@ time_interval=1.e2 # 3153600000
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-6
+AbsoluteLimit = 1.e-4
 Reduction = 1.e-8 # total reduction
 MinLinearReduction = 1.e-3 # min. red. in linear solve
 MaxLinearIteration = 10  
-LineSearchStrategy = hackbuschReusken #  boundedHackbuschReusken # noLineSearch #  boundedNoLineSearch #  
+LineSearchStrategy = noLineSearch # hackbuschReusken #  boundedHackbuschReusken #  boundedNoLineSearch #  
 MaxIterations = 15 
 ForceIteration = true
 FixedLinearReduction = false
@@ -65,8 +65,8 @@ VerbosityLevel = 2
 MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-# LowerBound1 = 0.e0
-LowerBound4 = 0.e0
+LowerBound1 = 0.e0
+; LowerBound4 = 0.e0
 ; LowerBound5 = 0.e0
 ; LowerBound6 = 0.e0
 NumberOfRestraints=1
@@ -83,7 +83,7 @@ Sh=0.0
 YH2O=0.00051219
 XCH4=0.0
 XC=0.0096
-T=4.6
+T=4.
 
 
 [grad]
