--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -3,10 +3,10 @@ worlddim=1
 LX=1
 NX=1
 LZ=-500.
-NZ=250
+NZ=10000
 
 [grid.alugrid]
-name=oneD.msh
+name=1d.msh
 LX=1
 LZ=-500.
 
@@ -29,31 +29,31 @@ Xright=1
 
 ; # time should be in years
 [time]
-dt_initial= 1.e-1#     3.1104e7
+dt_initial= 1.e-2#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
-dt_min=1.e-7
+dt_min=1.e-4
 dt_max=1.e1 # 3.1536e9
 max_newton_steps=10
 min_newton_steps=6
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test3
+file_name=test1
 time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-4
-Reduction = 1.e-8 # total reduction
-MinLinearReduction = 1.e-3 # min. red. in linear solve
+AbsoluteLimit = 1.e-6
+Reduction = 1.e-7 # total reduction
+MinLinearReduction = 1.e-6 # min. red. in linear solve
 MaxLinearIteration = 10  
-LineSearchStrategy = noLineSearch # hackbuschReusken #  boundedHackbuschReusken #  boundedNoLineSearch #  
-MaxIterations = 15 
+LineSearchStrategy = hackbuschReusken # noLineSearch #  boundedHackbuschReusken #  boundedNoLineSearch #  
+MaxIterations = 12 
 ForceIteration = true
 FixedLinearReduction = false
 ReassembleThreshold = 0.
@@ -66,10 +66,10 @@ MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
 LowerBound1 = 0.e0
-; LowerBound4 = 0.e0
+LowerBound4 = 1.e-19
 ; LowerBound5 = 0.e0
 ; LowerBound6 = 0.e0
-NumberOfRestraints=1
+NumberOfRestraints=2
 
 
 [hydrate_phase_change]
