--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -3,7 +3,7 @@ worlddim=1
 LX=1
 NX=1
 LZ=-500.
-NZ=2500
+NZ=500
 
 [grid.alugrid]
 name=1d.msh
@@ -30,27 +30,27 @@ Xright=1
 ; # time should be in years
 [time]
 dt_initial= 1.e-2#     3.1104e7
-time_end=4.5e5 # 9.4608e12 # just needed to change the time_end 
-T_end =4.5e5 # 9.4608e12#3.1536e7
+time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
+T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-6
-dt_max=2.e2 # 3.1536e9
+dt_max=1.e1 # 3.1536e9
 max_newton_steps=10
 min_newton_steps=6
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test3
-time_interval=2.e2 # 3153600000
+file_name=test5
+time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-4
-Reduction = 1.e-7 # total reduction
-MinLinearReduction = 1.e-3 # min. red. in linear solve
+AbsoluteLimit = 1.e-6
+Reduction = 1.e-9 # total reduction
+MinLinearReduction = 1.e-9 # min. red. in linear solve
 MaxLinearIteration = 10  
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken #  boundedNoLineSearch #  
 MaxIterations = 12 
