permeability in the boundary is editted

--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,24 +1,14 @@
 [grid]
 worlddim=1
-LX=10
-NX=4
+LX=10.
+NX=5
 LZ=-500.
 NZ=200
 
-[grid.alugrid]
-name=1d.msh
-LX=10
-LZ=-500.
-
-[grid.ug]
-name=grid.msh
-LX=10
-LZ=-500.
-
-[grid.lens]
-Xmin=.01
-Zmin=-400
-Xmax=.015
+[grid.lenz]
+Xmin=4.
+Zmin=-300
+Xmax=6.
 Zmax=0.
 
 [grid.ghsz]
@@ -94,7 +84,7 @@ gradTx = 0.
 gradTz = 0.035 # C/m
 
 [sediment]
-number_of_materials=1
+number_of_materials=2
 number_of_layers=1
 
 [sediment.material0]
@@ -109,7 +99,7 @@ beta=1.
 
 [sediment.material1]
 por=0.5
-K=1.e-15
+K=1.e-14
 pentry=50000.
 lambda=1.2
 swr=0.
