--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,45 +1,48 @@
 [grid]
 worlddim=1
-LX=10.
-NX=5
+LX=75.
+NX=15
 LZ=-500.
-NZ=200
+NZ=500
+name=gridinclined.msh
 
 [grid.lenz]
-Xmin=4.
+Xmin=0.
 Zmin=-300
-Xmax=6.
-Zmax=0.
+Xmax=3.
+Zmax=-150.
+X0=0
+X1=75
 
 [grid.ghsz]
 Ztop=-320.
 Zbottom=-400.
 Xleft=0.
-Xright=10
+Xright=75
 
 ; # time should be in years
 [time]
-dt_initial= 1.e-2#     3.1104e7
+dt_initial= 1.e-1#     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
 dt_min=1.e-6
-dt_max=1.e1 # 3.1536e9
+dt_max=1.e2 # 3.1536e9
 max_newton_steps=10
 min_newton_steps=6
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test7
+file_name=test9
 time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 AbsoluteLimit = 1.e-6
-Reduction = 1.e-9 # total reduction
+Reduction = 1.e-6 # total reduction
 MinLinearReduction = 1.e-9 # min. red. in linear solve
 MaxLinearIteration = 10  
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken #  boundedNoLineSearch #  
@@ -55,12 +58,12 @@ VerbosityLevel = 2
 MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-LowerBound1 = -0.e0
-LowerBound2 = -0.e0
-LowerBound4 = -0.e0
-; LowerBound5 = 0.e0
-; LowerBound6 = 0.e0
-NumberOfRestraints=3
+; LowerBound1 = -0.e0
+; LowerBound2 = -0.e0
+; LowerBound4 = -0.e0
+; ; LowerBound5 = 0.e0
+; ; LowerBound6 = 0.e0
+; NumberOfRestraints=1
 
 
 [hydrate_phase_change]
@@ -82,6 +85,9 @@ gradPx = 0.
 gradPz = 0.
 gradTx = 0.
 gradTz = 0.035 # C/m
+
+[permeability]
+rotation = 8
 
 [sediment]
 number_of_materials=2
