--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -30,7 +30,7 @@ min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune/Hydrate-DG/dune/Hydrate-DG/BM_phasechange_0d/
-file_name=test0
+file_name=test7
 time_interval=3600
 
 
@@ -39,7 +39,7 @@ time_interval=3600
 AbsoluteLimit = 5.e-2
 Reduction = 5.e-4 # total reduction
 MinLinearReduction = 1.e-7 # min. red. in linear solve
-MaxLinearIteration = 100  
+MaxLinearIteration = 10  
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken # boundedNoLineSearch #  
 ForceIteration = true
 MaxIterations = 12 
@@ -50,14 +50,14 @@ VerbosityLevel = 2
 #keepMatrix = true
 
 [newton.LineSearch]
-MaxIterations = 100 # limit linea search iterations
+MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-LowerBound1 = -1.e-16
-LowerBound4 = -1.e-16
-LowerBound5 = -1.e-16
-LowerBound6 = -1.e-16
-NumberOfRestraints=4
+; LowerBound1 = -1.e-16
+; LowerBound4 = -1.e-16
+; LowerBound5 = -1.e-16
+; LowerBound6 = -1.e-16
+; NumberOfRestraints=4
 
 
 
